force-app/main/default/objects/Quote/fields/BillingModel__c.field-meta.xml
<CustomField>
    <fullName>BillingModel__c</fullName>
    <label>Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MonthlyInvoice</fullName>
                <label>Monthly Invoice</label>
            </value>
            <value>
                <fullName>PrepaidInvoice</fullName>
                <label>Prepaid Invoice</label>
            </value>
            <value>
                <fullName>13InvoiceCycle</fullName>
                <label>1/3 Invoice Cycle</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>SpecialDeal</fullName>
                <label>Special Deal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>