force-app/main/default/objects/Quote/fields/BillingModelSpecialDeal__c.field-meta.xml
<CustomField>
    <fullName>BillingModelSpecialDeal__c</fullName>
    <label>Billing Model Special Deal</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>