force-app/main/default/objects/Quote/fields/CountProjectManagementAllowancePercent__c.field-meta.xml
<CustomField>
    <fullName>CountProjectManagementAllowancePercent__c</fullName>
    <label>Count Project Management Allowance %</label>
    <summaryFilterItems>
        <field>QuoteLineItem.ProjectManagementAllowancePackage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>