force-app/main/default/objects/Quote/fields/ExpenseBillingType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseBillingType__c</fullName>
    <label>Expense Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AtCost</fullName>
                <label>At Cost</label>
            </value>
            <value>
                <fullName>AllowancePercent</fullName>
                <default>true</default>
                <label>Allowance %</label>
            </value>
            <value>
                <fullName>FlatRate</fullName>
                <label>Flat Rate</label>
            </value>
            <value>
                <fullName>SpecialDeal</fullName>
                <label>Special Deal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>