force-app/main/default/objects/Quote/fields/Opportunity_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Price_Book__c</fullName>
    <formula>Opportunity.Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Price Book</label>
    <type>Text</type>
</CustomField>