force-app/main/default/objects/Quote/fields/Opportunity_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total_Amount__c</fullName>
    <formula>Opportunity.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>