force-app/main/default/objects/Quote/fields/ProjectManagementBillingType__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementBillingType__c</fullName>
    <label>Project Management Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AllowancePercent</fullName>
                <default>true</default>
                <label>Allowance %</label>
            </value>
            <value>
                <fullName>AtCost</fullName>
                <label>At Cost</label>
            </value>
            <value>
                <fullName>FlatRate</fullName>
                <label>Flat Rate</label>
            </value>
            <value>
                <fullName>SpecialDeal</fullName>
                <label>Special Deal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>