force-app/main/default/objects/Quote/fields/QuoteCurrency__c.field-meta.xml
<CustomField>
    <fullName>QuoteCurrency__c</fullName>
    <formula>TEXT( Opportunity.CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Currency</label>
    <type>Text</type>
</CustomField>