force-app/main/default/objects/Quote/fields/QuoteDescription__c.field-meta.xml
<CustomField>
    <fullName>QuoteDescription__c</fullName>
    <label>Quote Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>