force-app/main/default/objects/Quote/fields/QuotePricebook__c.field-meta.xml
<CustomField>
    <fullName>QuotePricebook__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Pricebook</label>
    <type>Text</type>
</CustomField>