force-app/main/default/objects/Quote/fields/QuoteReceiverContact__c.field-meta.xml
<CustomField>
    <fullName>QuoteReceiverContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Receiver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>