force-app/main/default/objects/Quote/fields/Signature1__c.field-meta.xml
<CustomField>
    <fullName>Signature1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signature 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Signature 1)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>