force-app/main/default/objects/Quote/fields/Signature2__c.field-meta.xml
<CustomField>
    <fullName>Signature2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signature 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Signature 2)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>