force-app/main/default/objects/Quote/fields/Start_sync__c.field-meta.xml
<CustomField>
    <fullName>Start_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start sync</label>
    <type>Checkbox</type>
</CustomField>