force-app/main/default/objects/Quote/fields/StartingPoint__c.field-meta.xml
<CustomField>
    <fullName>StartingPoint__c</fullName>
    <label>Starting Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>