force-app/main/default/objects/Quote/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>