force-app/main/default/objects/Quote/fields/Total1__c.field-meta.xml
<CustomField>
    <fullName>Total1__c</fullName>
    <formula>TotalTime__c + TotalExpense__c + TotalSupplierCosts__c +  TotalProjectManagementAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>