force-app/main/default/objects/Quote/fields/Total2__c.field-meta.xml
<CustomField>
    <fullName>Total2__c</fullName>
    <formula>Total1__c +  TotalExpenseAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>