force-app/main/default/objects/Quote/fields/TotalExpenseAllowance__c.field-meta.xml
<CustomField>
    <fullName>TotalExpenseAllowance__c</fullName>
    <label>Total Expense Allowance</label>
    <summarizedField>QuoteLineItem.TotalPriceF__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Expense</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ExpenseAllowancePackage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>