force-app/main/default/objects/Quote/fields/TotalLicense__c.field-meta.xml
<CustomField>
    <fullName>TotalLicense__c</fullName>
    <label>Total License</label>
    <summarizedField>QuoteLineItem.TotalPriceF__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>equals</operation>
        <value>License (Direct), License (Provision)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>