force-app/main/default/objects/Quote/fields/TotalOptions__c.field-meta.xml
<CustomField>
    <fullName>TotalOptions__c</fullName>
    <label>Total Options</label>
    <summarizedField>QuoteLineItem.TotalPriceF__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Time, Expense, Supplier Costs, License (Direct), License (Provision)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>