force-app/main/default/objects/Quote/fields/Totalprojectmanagement__c.field-meta.xml
<CustomField>
    <fullName>Totalprojectmanagement__c</fullName>
    <label>Total project management</label>
    <summarizedField>QuoteLineItem.ProjectManagementAmount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>