force-app/main/default/objects/Quote/fields/TotalProjectManagementAllowance__c.field-meta.xml
<CustomField>
    <fullName>TotalProjectManagementAllowance__c</fullName>
    <label>Total Project Management Allowance</label>
    <summarizedField>QuoteLineItem.TotalPriceF__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Time</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ProjectManagementAllowancePackage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>