force-app/main/default/objects/Quote/fields/TotalQuoteGross__c.field-meta.xml
<CustomField>
    <fullName>TotalQuoteGross__c</fullName>
    <formula>TotalQuoteNet__c +VATAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quote - Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>