force-app/main/default/objects/Quote/fields/TotalQuoteNet__c.field-meta.xml
<CustomField>
    <fullName>TotalQuoteNet__c</fullName>
    <formula>ROUND(
(TotalTime__c +TotalSupplierCosts__c+TotalLicense__c+TotalExpense__c+ TotalProjectManagementAllowance__c+ TotalExpenseAllowance__c+ TotalSupplierCostsGroup__c)
*20,0)/20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quote - Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>