force-app/main/default/objects/Quote/fields/TotalSupplierCosts__c.field-meta.xml
<CustomField>
    <fullName>TotalSupplierCosts__c</fullName>
    <label>Total Supplier Costs</label>
    <summarizedField>QuoteLineItem.TotalPriceF__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Supplier Costs</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.SupplierCostsGroup__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>