force-app/main/default/objects/Quote/fields/VATAmount__c.field-meta.xml
<CustomField>
    <fullName>VATAmount__c</fullName>
    <formula>ROUND(
CASE(VATPercent__c,&quot;0%&quot;,TotalQuoteNet__c,&quot;8%&quot;,TotalQuoteNet__c*0.08,&quot;7.7%&quot;, TotalQuoteNet__c *0.077,0)
*20,0)/20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>