force-app/main/default/objects/Quote/validationRules/QU001_Check_Pricebook.validationRule-meta.xml
<ValidationRule>
    <fullName>QU001_Check_Pricebook</fullName>
    <active>true</active>
    <description>Don&apos;t allow to create a quote with a Pricebook different from the Opportunity</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
Pricebook2Id != Opportunity.Pricebook2Id
)</errorConditionFormula>
    <errorMessage>The Quote Pricebook do not match  Opportunity Pricebook</errorMessage>
</ValidationRule>