force-app/main/default/objects/Quote/validationRules/QU001_PM_Percent_1.validationRule-meta.xml
<ValidationRule>
    <fullName>QU001_PM_Percent_1</fullName>
    <active>true</active>
    <errorConditionFormula>CountProjectManagementAllowancePercent__c &gt;1</errorConditionFormula>
    <errorMessage>Only one Product can reflect the Project Management Allowance %
(QU001)</errorMessage>
</ValidationRule>