force-app/main/default/objects/Quote/validationRules/QU002_Expense_Percent_1.validationRule-meta.xml
<ValidationRule>
    <fullName>QU002_Expense_Percent_1</fullName>
    <active>true</active>
    <errorConditionFormula>CountExpenseAllowancePercent__c &gt;1</errorConditionFormula>
    <errorMessage>Only one Product can reflect the Expense Allowance %
(QU002)</errorMessage>
</ValidationRule>